將 Apache HTTP Client 配置的參數外部化
close #9

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 demo.brewery.apihost=http://localhost:8080
+
+demo.apache.maxtotal=100
+demo.apache.defaultmaxperroute=20
+demo.apache.connectionrequesttimeout=3000
+demo.apache.sockettimeout=3000
+
 # logging.level.org.apache.http=debug
